--- a/JARDIM DIGITAL/JARDIM DIGITAL.csproj
+++ b/JARDIM DIGITAL/JARDIM DIGITAL.csproj
@@ -126,6 +126,7 @@
     <Compile Include="frm_Inicio.Designer.cs">
       <DependentUpon>frm_Inicio.cs</DependentUpon>
     </Compile>
+    <Compile Include="Plantas.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tela_Inicial.cs">
