--- a/JARDIM DIGITAL/JARDIM DIGITAL.csproj
+++ b/JARDIM DIGITAL/JARDIM DIGITAL.csproj
@@ -102,6 +102,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conn.cs" />
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_Cadastro_Usuário.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -136,6 +142,9 @@
       <DependentUpon>Tela_Inicial.cs</DependentUpon>
     </Compile>
     <Compile Include="Usuario.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frm_Cadastro_Plantas.resx">
       <DependentUpon>frm_Cadastro_Plantas.cs</DependentUpon>
     </EmbeddedResource>
