--- a/JARDIM DIGITAL/JARDIM DIGITAL.csproj
+++ b/JARDIM DIGITAL/JARDIM DIGITAL.csproj
@@ -102,11 +102,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conn.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Detalhe_Planta.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Detalhe_Planta.Designer.cs">
+      <DependentUpon>Detalhe_Planta.cs</DependentUpon>
     </Compile>
     <Compile Include="frm_Cadastro_Usuário.cs">
       <SubType>Form</SubType>
@@ -142,8 +142,8 @@
       <DependentUpon>Tela_Inicial.cs</DependentUpon>
     </Compile>
     <Compile Include="Usuario.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Detalhe_Planta.resx">
+      <DependentUpon>Detalhe_Planta.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_Cadastro_Plantas.resx">
       <DependentUpon>frm_Cadastro_Plantas.cs</DependentUpon>
