--- a/JARDIM DIGITAL/JARDIM DIGITAL.csproj
+++ b/JARDIM DIGITAL/JARDIM DIGITAL.csproj
@@ -137,6 +137,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seguranca.cs" />
     <Compile Include="Sesaao.cs" />
+    <Compile Include="Tela_Inicial.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tela_Inicial.Designer.cs">
+      <DependentUpon>Tela_Inicial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Usuario.cs" />
     <EmbeddedResource Include="Detalhe_Planta.resx">
       <DependentUpon>Detalhe_Planta.cs</DependentUpon>
@@ -163,6 +169,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Tela_Inicial.resx">
+      <DependentUpon>Tela_Inicial.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
