--- a/JARDIM DIGITAL/JARDIM DIGITAL.csproj
+++ b/JARDIM DIGITAL/JARDIM DIGITAL.csproj
@@ -137,11 +137,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seguranca.cs" />
     <Compile Include="Sesaao.cs" />
-    <Compile Include="Tela_Inicial.cs">
+    <Compile Include="frm_Tela_Inicial.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Tela_Inicial.Designer.cs">
-      <DependentUpon>Tela_Inicial.cs</DependentUpon>
+    <Compile Include="frm_Tela_Inicial.Designer.cs">
+      <DependentUpon>frm_Tela_Inicial.cs</DependentUpon>
     </Compile>
     <Compile Include="Usuario.cs" />
     <EmbeddedResource Include="Detalhe_Planta.resx">
@@ -169,8 +169,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Tela_Inicial.resx">
-      <DependentUpon>Tela_Inicial.cs</DependentUpon>
+    <EmbeddedResource Include="frm_Tela_Inicial.resx">
+      <DependentUpon>frm_Tela_Inicial.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
